update Order and pay Order
