# models/order.js
@@ -35,6 +35,10 @@ const orderSchema = new mongoose.Schema(
             require: true,
             default: [],
         },
+        messages: {
+            type: Array,
+            default: [],
+        },
     },
     {
         timestamps: true,
